record/src/snapshots/ytls_record__wrapped__test__wrapped.snap
---
source: record/src/wrapped.rs
expression: r
---
Ok(
    WrappedRecord {
        raw_bytes: [
            20,
            0,
            0,
            32,
            160,
            33,
            2,
            88,
            231,
            196,
            64,
            42,
            176,
            120,
            7,
            161,
            230,
            29,
            244,
            207,
            10,
            181,
            143,
            130,
            139,
            38,
            198,
            173,
            242,
            150,
            84,
            34,
            138,
            192,
            182,
            111,
        ],
        msg: Handshake(
            HandshakeMsg {
                hdr: HandshakeHdr {
                    msg_type: Finished,
                    msg_length: [
                        0,
                        0,
                        32,
                    ],
                },
                msg: ClientFinished(
                    ClientFinished {
                        hmac: [
                            160,
                            33,
                            2,
                            88,
                            231,
                            196,
                            64,
                            42,
                            176,
                            120,
                            7,
                            161,
                            230,
                            29,
                            244,
                            207,
                            10,
                            181,
                            143,
                            130,
                            139,
                            38,
                            198,
                            173,
                            242,
                            150,
                            84,
                            34,
                            138,
                            192,
                            182,
                            111,
                        ],
                    },
                ),
            },
        ),
    },
)
